# myGym

./: .gitignore  .readthedocs.yaml  Dockerfile  IMPLEMENTATION_SUMMARY.md  LICENSE.txt  README.MD  README.md  README1.MD  README_particle_filter.md  Sim2Real.md  Singularity  WARP.md  create_joint_jsons.py  environment.old  environment.yml  pyproject.toml  requirements.old  requirements.txt  requirements_rtd.txt  rllib.yml  setup.py
docs/: README.md
docs/source/: conf.py  index.rst  logo.old
myGym/: .gitignore  .~lock.outKalman.csv#  .~lock.results_EstimatorPFKalmanRot.csv#  PEPPER_VR_TELEOPERATION.md  QUICKSTART_VR.md  README_taskbuilder.md  TASKBUILDER_MOCKUP.txt  VR_IMPLEMENTATION_SUMMARY.md  __init__.py  arg_dict_train  condaenv.e218cqgt.requirements.txt  conversion.csv  download_baselines.sh  download_textures.sh  download_trained.sh  download_vision.sh  env.txt  env.yml  eval_results_average.py  examples_taskbuilder.py  filter_test.py  fusion_node_clean.py  generate_dataset.py  grasp_gui_slider.py  grasper_calib.py  grasper_hands_and_head.py  ground_truth.csv  humanoid-ppo.yaml  ik_solver.py  ik_solver2.py  iksolver.py  install_solve.txt  learnability.py  merge_coco_annotations.py  move.py  multi_evaluation.py  multi_evaluation_new.py  multi_evaluation_v1.py  multitest.py  multitester-speed.py  (+78 more)
myGym/cluster/: train_AGMDW.sh
myGym/configs/: A.json  AG.json  AGM.json  AGMD.json  AGMDW.json  AGMDWa.json  AGN.json  AGR.json  AGRMDW.json  FMLFR_4n.json  IK_solver.json  MOT_trajectory_parameters.json  configs.txt  dataset_coco.json  dataset_custom.json  dataset_dope.json  dataset_example.json  dataset_vae.json  debug.json  debug1.json  debugdist.json  dual_pick_and_place.json  g1.json  g1A.json  g1AGM.json  gripper.json  multi.json  multi1.json  multiconfig1.json  multimodular_pnp.json  multimodular_poke.json  multimodular_reach.json  nicoA.json  nicoAGM.json  parameters.json  pick_and_place.json  pnp_2n_bgrip.json  pnp_2n_grip_pick.json  pnp_2n_grip_pick_ar10.json  pnp_2n_grip_pick_ar3.json  (+160 more)
myGym/envs/: __init__.py  base_env.py  base_env_debug.py  camera.py  configure_rddl.py  crow_test_env.py  crow_workspace_env.py  distractor.py  env_object.py  estimators.py  gym_env.py  gym_envSB3debug.py  human.py  kuka.py  language.py  natural_language.py  particle_filter.py  predicates.py  randomizers.py  rewards.py  rewardsSB3debug.py  robot.py  scene_objects.py  task.py  taskSB3debug.py  taskmanager.py  test_volume_class.py  trajectory_generator.py  vision_module.py  visualize_trajectory.py  wrappers.py
myGym/envs/robots/tiago/hey5_description/: package.xml
myGym/envs/robots/tiago/hey5_description/cmake/: hey5_descriptionConfig.cmake
myGym/envs/robots/tiago/hey5_description/config/: two_hands.rviz
myGym/envs/robots/tiago/hey5_description/gazebo/: gazebo.urdf.xacro
myGym/envs/robots/tiago/hey5_description/urdf/: actuators.urdf.xacro  deg_to_rad.urdf.xacro  fingers.urdf.xacro  hey5_hand.urdf.xacro  materials.urdf.xacro  palm.urdf.xacro
myGym/envs/robots/tiago/pmb2_description/: CHANGELOG.rst  package.xml
myGym/envs/robots/tiago/pmb2_description/gazebo/: gazebo.urdf.xacro
myGym/envs/robots/tiago/pmb2_description/robots/: pmb2_default.urdf.xacro  pmb2_full.urdf.xacro  pmb2_sick551.urdf.xacro  show.launch  upload.launch
myGym/envs/robots/tiago/pmb2_description/urdf/sensors/: bumper.urdf.xacro  microphone.urdf.xacro  sick_tim551_laser.urdf.xacro
myGym/envs/robots/tiago/pmb2_description/urdf/wheels/: caster.urdf.xacro  wheel.gazebo.xacro
myGym/envs/robots/tiago/tiago3/tiago_description/: package.xml
myGym/envs/robots/tiago/tiago3/tiago_description/urdf/arm/: wrist.urdf.xacro
myGym/envs/robots/tiago/tiago4/pal_gripper_description/: package.xml
myGym/envs/robots/tiago/tiago4/pal_gripper_description/urdf/: gripper.gazebo.xacro  gripper.transmission.xacro
myGym/envs/robots/tiago/tiago_dual_description/: package.xml
myGym/envs/robots/tiago/tiago_dual_description/config/collision/: collision_parameters.yaml
myGym/envs/robots/tiago/tiago_dual_description/robots/: upload.launch
myGym/envs/robots/tiago/tiago_dual_description/urdf/torso/: torso_dual.urdf.xacro
myGym/results/: .~lock.EstimatorGH_circles_splines_.csv#  .~lock.EstimatorGH_lines_lines_acc_splines_circles_.csv#  (+74 more)
myGym/ros/: README.md  action_stack.py  pyproject.toml  ros_transmitter.py  urwid_example.py  zmq_config.yaml
myGym/ros/docker/: docker-compose.yml  tiago_dual_public-melodic.rosinstall
myGym/ros/docker/melodic_ws/joint_control/: e_stop.py  get_urdf.py  joint_zmq_server.py  kdl_parser_py.py  robot.urdf  run_e_stop.sh
myGym/ros/docker/src/melodic/: Dockerfile  entrypoint.sh
myGym/ros/mygym_ros/: __main__.py  dummy.py  file_module_getter.py  recording_viz.py  zmq_playback.py
myGym/ros/mygym_ros/transmit_plugins/: __init__.py  joint_zmq_server.py  ros1_noetic_receiver.py  test.py  tp_melodic_direct.py  tp_ros_1_noetic.py  tp_ros_noetic_joint.py
myGym/ros/mygym_ros_noetic/: CMakeLists.txt  package.xml  setup.py
myGym/ros/mygym_ros_noetic/scripts/: ros_connector_noetic.py
myGym/ros/mygym_ros_noetic/src/mygym_ros_noetic/: action_stack.py  robot_proxy_noetic.py
zmq-comm/: marker_to_targets_file.py  send_joint_gdrnet.py  send_joint_gdrnet_AG_pre.py  send_joint_multitest.py  send_joint_multitest2.py  send_joint_pretest.py  send_joint_test.py  targets.txt  zmq_gdrnet_publisher.py
(+1019 files in other folders)
