<?xml version="1.0"?>
<package>
  <name>pmb2_description</name>
  <version>1.1.9</version>
  <description>
      Mechanical, kinematic, visual, etc. description of the PMB2 robot.
      The files in this package are parsed and used by
      a variety of other components.  Most users will not interact directly
      with this package.
  </description>

  <maintainer email="info@pal-robotics.com">PAL Robotics</maintainer>
  <maintainer email="tiago_support@pal-robotics.com">TIAGo support PAL Robotics</maintainer>

  <license>Apache License 2.0</license>
  <author email="bence.magyar@pal-robotics.com">Bence Magyar</author>
  <author email="enrique.fernandez@pal-robotics.com">Enrique Fernandez</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>xacro</run_depend>
  <run_depend>pal_gazebo_plugins</run_depend>

</package>
